# SCOUT

./: .env  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  HANDOFF_UNIVERSAL_CHAINING.md  HANDOFF_V2.8.0_RAG.md  LICENSE  NOTICE  README.ko.md  README.md  SECURITY.md  exploit_runner.py  metrics.json  pyproject.toml  pyrightconfig.json  quality_gate.json  ref.md  scout  scout.py  tui_app.py
.github/: pull_request_template.md
agent/: core.py
benchmarks/: tier2-20260331-executable-files.txt  tier2-20260331-files.txt
collect/: binwalk_runner.py  emba_runner.py  firmae_runner.py  ghidra_runner.py  ida_runner.py  static_scanner.py
docs/: SCOUT_experimental_protocol_sheets.xlsx  aeg_e2e_validation.md  aiedge_8mb_track_runbook.md  aiedge_adapter_contract.md  aiedge_duplicate_gate_contract.md  aiedge_firmware_artifacts_v1.md  aiedge_report_contract.md  aiedge_stage_request.json  aiedge_stage_response.json  analyst_digest_contract.md  analyst_viewer_cockpit_mapping.md  benchmark_governance.md  benchmark_pair_gap.md  blueprint.md  carry_over_benchmark_v2.6.md  code_slicing_contract.md  confidence_semantic_break_v2.6.md  controlled_weaponization_layer.md  cra_compliance_mapping.md  deep_firmware_analysis_er_e50_2026-02-18.md  determinism_policy.md  e2e_terminator_aiedge_stage_control.md  er605_poc_quality.md  evidence_tier_contract.md  exploit-pattern-rag.md  exploit_dag_contract.md  exploitability_dossier_contract.md  finding_diversity_gate.md  index.md  known_cve_ground_truth.md  llm_driver_degradation_matrix.md  pair_corpus_candidates.md  pair_eval_lane.md  (+22 more)
(+408 files in other folders)
