[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aiedge"
version = "0.0.0"
description = "Internal AI Edge firmware agent (v1 scaffold)"
dependencies = []

[project.scripts]
aiedge = "aiedge.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.pyright]
extraPaths = ["src"]
